fix some lyrics backdrop issues
fix backdrop not showing after starting spotify and opening current track lyrics
fix a delay when the user tries to quickly hide the lyrics immediately after changing the track and opening the lyrics
improve performance - no backdrop animation when backdrop is hidden or artwork didn't change

--- a/user.css
+++ b/user.css
@@ -2183,7 +2183,6 @@ option {
   position: absolute;
   width: 100%;
   height: 100%;
-  display: none;
 }
 
 .lyrics-lyrics-background {
